[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Font/Gontserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Font/Gontserrat-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/return.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/checkmark.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 96
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.313726 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.282353, 0.282353, 0.282353, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.392157 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.282353, 0.282353, 0.282353, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.282353, 0.282353, 0.282353, 1 )
border_blend = true

[sub_resource type="StyleBoxLine" id=7]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.568627, 0.568627, 0.568627, 0.498039 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.568627, 0.568627, 0.568627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.282353, 0.282353, 0.282353, 0.705882 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="DynamicFont" id=11]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
CheckBox/colors/font_color = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover = Color( 0.784314, 0.784314, 0.784314, 0.784314 )
CheckBox/colors/font_color_hover_pressed = Color( 0.784314, 0.784314, 0.784314, 1 )
CheckBox/colors/font_color_pressed = Color( 0.588235, 0.588235, 0.588235, 0.784314 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = null
CheckBox/icons/checked = null
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = null
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPicker/constants/h_width = 30
ColorPicker/constants/label_width = 10
ColorPicker/constants/margin = 4
ColorPicker/constants/sv_height = 256
ColorPicker/constants/sv_width = 256
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = null
ColorPicker/icons/overbright_indicator = null
ColorPicker/icons/preset_bg = null
ColorPicker/icons/screen_picker = null
ColorPickerButton/colors/font_color = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ColorPickerButton/constants/hseparation = 2
ColorPickerButton/fonts/font = null
ColorPickerButton/icons/bg = null
ColorPickerButton/styles/disabled = null
ColorPickerButton/styles/focus = null
ColorPickerButton/styles/hover = null
ColorPickerButton/styles/normal = null
ColorPickerButton/styles/pressed = null
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
FileDialog/colors/file_icon_modulate = Color( 0, 0, 0, 1 )
FileDialog/colors/files_disabled = Color( 0, 0, 0, 1 )
FileDialog/colors/folder_icon_modulate = Color( 0, 0, 0, 1 )
FileDialog/icons/file = null
FileDialog/icons/folder = null
FileDialog/icons/parent_folder = null
FileDialog/icons/reload = null
FileDialog/icons/toggle_hidden = null
Fonts/fonts/large = null
Fonts/fonts/normal = null
GraphEdit/colors/activity = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_major = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_minor = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_fill = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_stroke = Color( 0, 0, 0, 1 )
GraphEdit/constants/bezier_len_neg = 160
GraphEdit/constants/bezier_len_pos = 80
GraphEdit/constants/port_grab_distance_horizontal = 48
GraphEdit/constants/port_grab_distance_vertical = 6
GraphEdit/icons/minus = null
GraphEdit/icons/more = null
GraphEdit/icons/reset = null
GraphEdit/icons/snap = null
GraphEdit/styles/bg = null
GraphNode/colors/close_color = Color( 0, 0, 0, 1 )
GraphNode/colors/resizer_color = Color( 0, 0, 0, 1 )
GraphNode/colors/title_color = Color( 0, 0, 0, 1 )
GraphNode/constants/close_offset = 18
GraphNode/constants/port_offset = 3
GraphNode/constants/separation = 1
GraphNode/constants/title_offset = 20
GraphNode/fonts/title_font = null
GraphNode/icons/close = null
GraphNode/icons/port = null
GraphNode/icons/resizer = null
GraphNode/styles/breakpoint = null
GraphNode/styles/comment = null
GraphNode/styles/commentfocus = null
GraphNode/styles/defaultfocus = null
GraphNode/styles/defaultframe = null
GraphNode/styles/frame = null
GraphNode/styles/position = null
GraphNode/styles/selectedframe = null
GridContainer/constants/hseparation = 4
GridContainer/constants/vseparation = 4
HBoxContainer/constants/separation = 4
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = null
HScrollBar/styles/grabber_highlight = null
HScrollBar/styles/grabber_pressed = null
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
HSeparator/constants/separation = 4
HSeparator/styles/separator = null
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = null
HSlider/styles/grabber_area_highlight = null
HSlider/styles/slider = null
HSplitContainer/constants/autohide = 1
HSplitContainer/constants/separation = 12
HSplitContainer/icons/grabber = null
HSplitContainer/styles/bg = null
Icons/icons/close = null
ItemList/colors/font_color = Color( 1, 1, 1, 1 )
ItemList/colors/font_color_selected = Color( 0.568627, 0.568627, 0.568627, 1 )
ItemList/colors/guide_color = Color( 1, 1, 1, 1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = null
ItemList/styles/bg = SubResource( 3 )
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = null
Label/styles/normal = null
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
LinkButton/colors/font_color = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
LinkButton/constants/underline_spacing = 2
LinkButton/fonts/font = null
LinkButton/styles/focus = null
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0
MenuButton/colors/font_color = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
MenuButton/constants/hseparation = 3
MenuButton/fonts/font = null
MenuButton/styles/disabled = null
MenuButton/styles/focus = null
MenuButton/styles/hover = null
MenuButton/styles/normal = null
MenuButton/styles/pressed = null
OptionButton/colors/font_color = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_disabled = Color( 0.392157, 0.392157, 0.392157, 0.588235 )
OptionButton/colors/font_color_hover = Color( 1, 1, 1, 0.784314 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = SubResource( 4 )
OptionButton/styles/focus = SubResource( 4 )
OptionButton/styles/hover = SubResource( 5 )
OptionButton/styles/normal = SubResource( 5 )
OptionButton/styles/pressed = SubResource( 5 )
Panel/styles/panel = null
PanelContainer/styles/panel = null
PopupDialog/styles/panel = null
PopupMenu/colors/font_color = Color( 1, 1, 1, 1 )
PopupMenu/colors/font_color_accel = Color( 1, 1, 1, 1 )
PopupMenu/colors/font_color_disabled = Color( 1, 1, 1, 0.705882 )
PopupMenu/colors/font_color_hover = Color( 0.172549, 0.172549, 0.172549, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 6 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = SubResource( 7 )
PopupPanel/styles/panel = null
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = null
ProgressBar/styles/fg = null
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_selected = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
RichTextLabel/colors/selection_color = Color( 0, 0, 0, 1 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null
ScrollContainer/styles/bg = null
SpinBox/icons/updown = null
TabContainer/colors/font_color_bg = Color( 0.752941, 0.752941, 0.752941, 1 )
TabContainer/colors/font_color_disabled = Color( 0.498039, 0.498039, 0.498039, 1 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 8 )
TabContainer/styles/tab_bg = SubResource( 9 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 10 )
Tabs/colors/font_color_bg = Color( 0.592157, 0.592157, 0.592157, 1 )
Tabs/colors/font_color_disabled = Color( 0.345098, 0.345098, 0.345098, 0.862745 )
Tabs/colors/font_color_fg = Color( 1, 1, 1, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = null
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null
TextEdit/colors/background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/bookmark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
TextEdit/colors/breakpoint_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0, 0, 0, 1 )
TextEdit/colors/code_folding_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_existing_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_scroll_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_selected_color = Color( 0, 0, 0, 1 )
TextEdit/colors/current_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/executing_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0, 0, 0, 1 )
TextEdit/colors/line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/mark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/member_variable_color = Color( 0, 0, 0, 1 )
TextEdit/colors/number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/safe_line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/selection_color = Color( 0, 0, 0, 1 )
TextEdit/colors/symbol_color = Color( 0, 0, 0, 1 )
TextEdit/colors/word_highlighted_color = Color( 0, 0, 0, 1 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null
ToolButton/colors/font_color = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ToolButton/constants/hseparation = 3
ToolButton/fonts/font = null
ToolButton/styles/disabled = null
ToolButton/styles/focus = null
ToolButton/styles/hover = null
ToolButton/styles/normal = null
ToolButton/styles/pressed = null
TooltipLabel/colors/font_color = Color( 0, 0, 0, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = null
TooltipPanel/styles/panel = null
Tree/colors/custom_button_font_highlight = Color( 0, 0, 0, 1 )
Tree/colors/drop_position_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color_selected = Color( 0, 0, 0, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 1 )
Tree/colors/relationship_line_color = Color( 0, 0, 0, 1 )
Tree/colors/title_button_color = Color( 0, 0, 0, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = null
Tree/fonts/title_button_font = null
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = null
Tree/styles/bg_focus = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
VBoxContainer/constants/separation = 4
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 4
VSeparator/styles/separator = null
VSlider/icons/grabber = null
VSlider/icons/grabber_disabled = null
VSlider/icons/grabber_highlight = null
VSlider/icons/tick = null
VSlider/styles/grabber_area = null
VSlider/styles/grabber_area_highlight = null
VSlider/styles/slider = null
VSplitContainer/constants/autohide = 1
VSplitContainer/constants/separation = 12
VSplitContainer/icons/grabber = null
VSplitContainer/styles/bg = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = null

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.0
margin_top = 20.0
margin_right = 428.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.568627, 0.568627, 0.568627, 1 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTabContainer" type="TabContainer" parent="MainContainer"]
margin_right = 400.0
margin_bottom = 346.0
size_flags_vertical = 3
theme = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Tabs" parent="MainContainer/SettingsTabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 33.0
margin_right = -2.0
margin_bottom = -2.0

[node name="GraphicsContainer" type="VBoxContainer" parent="MainContainer/SettingsTabContainer/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationsContainer" type="HBoxContainer" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer"]
margin_top = 90.0
margin_right = 396.0
margin_bottom = 121.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationsLabel" type="Label" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/AnimationsContainer"]
margin_left = 123.0
margin_top = 5.0
margin_right = 211.0
margin_bottom = 26.0
mouse_filter = 1
text = "Animations"

[node name="AnimationsOptionButton" type="OptionButton" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/AnimationsContainer"]
margin_left = 215.0
margin_right = 272.0
margin_bottom = 31.0
focus_mode = 0
enabled_focus_mode = 0
text = "On"
items = [ "On", null, false, 0, null, "Off", null, false, 1, null ]
selected = 0

[node name="CheckBoxContainer" type="VBoxContainer" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer"]
margin_top = 126.0
margin_right = 396.0
margin_bottom = 221.0

[node name="ScreenShakesCheckBox" type="CheckBox" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer"]
margin_right = 396.0
margin_bottom = 29.0
focus_mode = 0
enabled_focus_mode = 0
text = "Enable Screenshakes"
align = 1

[node name="HealthBarCheckBox" type="CheckBox" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer"]
margin_top = 33.0
margin_right = 396.0
margin_bottom = 62.0
focus_mode = 0
enabled_focus_mode = 0
text = "Show Healthbar"
align = 1

[node name="DamageNumbersCheckBox" type="CheckBox" parent="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer"]
margin_top = 66.0
margin_right = 396.0
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
text = "Show Damage Numbers"
align = 1

[node name="Audio" type="Tabs" parent="MainContainer/SettingsTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 33.0
margin_right = -2.0
margin_bottom = -2.0

[node name="ButtonPanel" type="Panel" parent="MainContainer"]
margin_top = 350.0
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 50 )
custom_styles/panel = SubResource( 13 )

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer/ButtonPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="MainContainer/ButtonPanel/ButtonContainer"]
margin_left = 148.0
margin_right = 198.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="ApplyButton" type="TextureButton" parent="MainContainer/ButtonPanel/ButtonContainer"]
margin_left = 202.0
margin_right = 252.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="mouse_entered" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/AnimationsContainer/AnimationsLabel" to="." method="_on_AnimationsLabel_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/AnimationsContainer/AnimationsLabel" to="." method="_on_AnimationsLabel_mouse_exited"]
[connection signal="item_selected" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/AnimationsContainer/AnimationsOptionButton" to="." method="_on_AnimationsOptionButton_item_selected"]
[connection signal="mouse_entered" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/ScreenShakesCheckBox" to="." method="_on_ScreenShakesCheckBox_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/ScreenShakesCheckBox" to="." method="_on_ScreenShakesCheckBox_mouse_exited"]
[connection signal="toggled" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/ScreenShakesCheckBox" to="." method="_on_ScreenShakesCheckBox_toggled"]
[connection signal="mouse_entered" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/HealthBarCheckBox" to="." method="_on_HealthBarCheckBox_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/HealthBarCheckBox" to="." method="_on_HealthBarCheckBox_mouse_exited"]
[connection signal="toggled" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/HealthBarCheckBox" to="." method="_on_HealthBarCheckBox_toggled"]
[connection signal="mouse_entered" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/DamageNumbersCheckBox" to="." method="_on_DamageNumbersCheckBox_mouse_entered"]
[connection signal="mouse_exited" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/DamageNumbersCheckBox" to="." method="_on_DamageNumbersCheckBox_mouse_exited"]
[connection signal="toggled" from="MainContainer/SettingsTabContainer/Graphics/GraphicsContainer/CheckBoxContainer/DamageNumbersCheckBox" to="." method="_on_DamageNumbersCheckBox_toggled"]
[connection signal="pressed" from="MainContainer/ButtonPanel/ButtonContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MainContainer/ButtonPanel/ButtonContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
